--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,86 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+	height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+p {
+	font-weight: 700;
+	font-size: 20px;
+}
+
+.from_group {
+	font-size: 18px;
+	padding: 10px;
+}
+
+.from_group label {
+	display: block;
+	padding-bottom: 10px;
+}
+
+.from_group input {
+	padding: 10px;
+	min-width: 250px;
+	font-size: 14px;
+}
+
+.submit {
+	background: gray;
+	color: black;
+	padding: 10px;
+	font-size: 15px;
+	border-radius: 4px;
+	min-width: 150px;
+	cursor: pointer;
+	border: none;
+}
+
+.listing {
+  padding: 10px 25px;
+  border: 1px solid rgba(204, 201, 201, 0.3);
+  position: relative;
+  border-radius: 12px;
+}
+
+.listing:not(:last-child) {
+  margin-right: 5px;
+}
+
+.listing:hover .remove {
+  display: inline;
+}
+
+.remove {
+  position: absolute;
+    top: 1px;
+    right: 2px;
+    font-size: 13px;
+    background: red;
+    width: 15px;
+    height: 16px;
+    color: white;
+    text-align: center;
+    line-height: 13px;
+    border-radius: 12px;
+    cursor: pointer;
+    display: none;
+}
+
+.loading {
+  font-size: 12px;
+  font-style: italic;
 }
